--- a/html/hyun.html
+++ b/html/hyun.html
@@ -9,13 +9,16 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <div class="containermain">
-        <img src="../img_logo/main.png" alt="메인 브랜드 이미지" id="main">
-        <div class="main_content">
-            <span id="main_brand">스틸스</span>
-            <p id="main_explain">스틸스는 철제 가구 제품을 소개하는 디지털 약자를 위한 브랜딩 사이트입니다. 사용자가 쉽게 인식할 수 있도록 한글로만 구성했으며, 모든 글자와 이미지는 마우스를 올렸을 때, 크게 확인할 수 있습니다.</p>
-        </div>
+
+    <div class="badge">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+        </svg>
+    </div>
+    <div class="badge">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-dash-fill" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0M6 9.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1z"/>
+        </svg>
     </div>
 
 
