Add Product Pop-up

--- a/html/Image_slider.html
+++ b/html/Image_slider.html
@@ -20,8 +20,7 @@
       rel="stylesheet"
       href="http://fonts.googleapis.com/icon?family=Material+Icons"
     />
-
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/Img_slider.css" />
   </head>
 
   <body>
