--- a/html/hyewon.html
+++ b/html/hyewon.html
@@ -21,100 +21,37 @@
       rel="stylesheet"
       href="http://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="stylesheet" href="/css/proguct_page.css" />
+    <link rel="stylesheet" href="/css/input_file.css" />
   </head>
 
   <body>
-    <div id="root">
-      <button type="button" id="modal_opne_btn">제품사진 클릭</button>
-    </div>
-    <div id="modal">
-      <div class="modal_content">
-        <div class="close_button">
-          <svg
-            id="modal_close_btn"
-            xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="20"
-            fill="currentColor"
-            class="bi bi-x-lg"
-            viewBox="0 0 20 20"
-          >
-            <path
-              d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"
-            />
-          </svg>
-        </div>
-        <div class="content">
-          <div class="swiper">
-            <div class="swiper-wrapper">
-              <img class="swiper-slide" src="/product_img/item1_1.jpg" />
-              <img class="swiper-slide" src="/product_img/item1_2.jpg" />
-              <img class="swiper-slide" src="/product_img/item1_3.jpg" />
-              <img class="swiper-slide" src="/product_img/item1_4.jpg" />
-            </div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-button-prev">
-              <div class="material-icons"></div>
-            </div>
-            <div class="swiper-button-next">
-              <div class="material-icons"></div>
-            </div>
-          </div>
-          <div class="description">
-            <div class="product_name">
-              <h2>Lake Louise Table / 2,550,000원</h2>
-            </div>
-            <div class="product_description">
-              <p>
-                부드러운 곡선과 반짝이는 밀러 스테인레스 상판이 돋보이는 레이크
-                루이스 테이블은 세계 10대 절경인 Banff Lake Louise에 영감을 받아
-                투명하고 잔잔한 호수 위로 아름다운 절경이 비춰지는 모습을 형상화
-                하였습니다.
-                <br />
-                *본 상품은 주문 제작이 가능한 상품입니다.
-              </p>
-              <p>Specs:</p>
-              <ul>
-                <li class="style1">Dimensions:</li>
-                <ul>
-                  <li class="style2">(W)1338mm, (D)832mm, (H)740mm</li>
-                </ul>
-                <li class="style1">Material : 304 Stainless Steel</li>
-                <li class="style1">
-                  User Recommendations: Cleaner for stainless steel
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="buy_button">
-          <a href="" class="button btnFloat but_btn"></a>
-        </div>
-        <div class="modal_layer"></div>
+    <form>
+      <div>
+        <label for="input_file">파일을 추가해주세요.</label>
+        <input type="file" id="input_file" />
       </div>
-    </div>
+      <div>
+        <button onclick="test(event)">summit</button>
+      </div>
+    </form>
     <script>
-      document.getElementById("modal_opne_btn").onclick = function () {
-        document.getElementById("modal").style.display = "block";
-      };
+      function test(event) {
+        event.preventDefault(); //submit 할때 새로고침 되는것을 방지
+        let fileObject = document.getElementById("input_file");
+        let fileName = fileObject.files[0];
 
-      document.getElementById("modal_close_btn").onclick = function () {
-        document.getElementById("modal").style.display = "none";
-      };
-      new Swiper(".swiper", {
-        loop: true,
-        slidesPerView: 1,
-        centeredSlides: true,
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-        navigation: {
-          prevEl: ".swiper-button-prev",
-          nextEl: ".swiper-button-next",
-        },
-      });
+        let fr = new FileReader();
+        fr.readAsText(fileName, "utf-8");
+
+        fr.onload = () => {
+          parseText(fr.result);
+        };
+      }
+
+      function parseText(text) {
+        console.log(text);
+        // 여기서 파일 가공하면됨
+      }
     </script>
   </body>
 </html>
