--- a/html/main.html
+++ b/html/main.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gasoek+One&display=swap" rel="stylesheet">
+    
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
@@ -23,10 +24,69 @@
     />
     <link rel="stylesheet" href="/css/stylehh.css">
     <link rel="stylesheet" href="/css/Img_slider.css" />
+    <link rel="stylesheet" href="/css/header.css">
     <title>스틸스</title>
 </head>
 <body>
-    
+  <header class="header">
+    <a href="#" class="nav__brandLogo">
+        <img src="/img_logo/logo.png" alt="brandLogo" width="90">
+    </a>
+    <nav>
+        <ul class="nav__list">
+            <li class="nav__item"><a href="#" class="nav__link">홈</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">서비스</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">포트폴리오</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">블로그</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">연락처</a></li>
+        </ul>
+    </nav>
+    <div class="nav__toggle">
+        <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="40"
+        fill="white"
+        class="bi bi-list nav__img"
+        viewBox="0 0 16 16"
+        >
+            <path
+                fill-rule="evenodd"
+                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
+            />
+        </svg>
+    </div>
+    <div class="menuBarIcons">
+        <!-- 검색 -->
+        <div class="button button-menu-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-search" viewBox="0 0 16 16">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+          </svg></div>
+          <!-- 장바구니 -->
+        <div class="button button-menu-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-cart-fill" viewBox="0 0 16 16">
+            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+          </svg></div>
+          <!-- 로그인 -->
+        <div class="button button-menu-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30px" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+          </svg></div>
+    </div>
+  </header>
+  <div class="nav__div">
+    <div class="div__item"><a href="#" class="nav__link">홈</a></div>
+    <div class="div__item"><a href="#" class="nav__link">서비스</a></div>
+    <div class="div__item"><a href="#" class="nav__link">포트폴리오</a></div>
+    <div class="div__item"><a href="#" class="nav__link">블로그</a></div>
+    <div class="div__item"><a href="#" class="nav__link">연락처</a></div>
+  </div>
+  
+  <script>
+    // JavaScript
+    $(document).ready(function() {
+        $('.nav__toggle').click(function() {
+            $('.nav__div').toggle();
+        });
+    });
+  </script>
     <main>
         <article class="containermain">
             <div class="main-bg"></div>
