--- a/html/main.html
+++ b/html/main.html
@@ -29,6 +29,13 @@
 </head>
 <body>
   <header class="header">
+    <div class="nav-login">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30px" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
+          <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+          <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+        </svg>
+    </div>
+    <div class="no_div"></div>
     <a href="#" class="nav__brandLogo">
         <img src="/img_logo/logo.png" alt="brandLogo" width="90">
     </a>
@@ -44,7 +51,7 @@
     <div class="nav__toggle">
         <svg
         xmlns="http://www.w3.org/2000/svg"
-        width="40"
+        width="30"
         fill="white"
         class="bi bi-list nav__img"
         viewBox="0 0 16 16"
