header, main 수정 업로드

--- a/html/main.html
+++ b/html/main.html
@@ -18,6 +18,7 @@
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
     />
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link
       rel="stylesheet"
       href="http://fonts.googleapis.com/icon?family=Material+Icons"
