--- a/html/product_page.html
+++ b/html/product_page.html
@@ -1,3 +1,4 @@
+<!-- CDN이 필요한 컴포넌트라서 코드 전체를 넣어두었습니다. -->
 <!DOCTYPE html>
 <html lang="ko">
   <head>
@@ -5,10 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
-    />
 
     <link
       rel="stylesheet"
@@ -60,32 +57,7 @@
               <div class="material-icons"></div>
             </div>
           </div>
-          <div class="description">
-            <div class="product_name">
-              <h2>Lake Louise Table / 2,550,000원</h2>
-            </div>
-            <div class="product_description">
-              <p>
-                부드러운 곡선과 반짝이는 밀러 스테인레스 상판이 돋보이는 레이크
-                루이스 테이블은 세계 10대 절경인 Banff Lake Louise에 영감을 받아
-                투명하고 잔잔한 호수 위로 아름다운 절경이 비춰지는 모습을 형상화
-                하였습니다.
-                <br />
-                *본 상품은 주문 제작이 가능한 상품입니다.
-              </p>
-              <p>Specs:</p>
-              <ul>
-                <li class="style1">Dimensions:</li>
-                <ul>
-                  <li class="style2">(W)1338mm, (D)832mm, (H)740mm</li>
-                </ul>
-                <li class="style1">Material : 304 Stainless Steel</li>
-                <li class="style1">
-                  User Recommendations: Cleaner for stainless steel
-                </li>
-              </ul>
-            </div>
-          </div>
+          <div id="content" class="description"></div>
         </div>
         <div class="buy_button">
           <a href="" class="button btnFloat but_btn"></a>
@@ -113,6 +85,34 @@
           prevEl: ".swiper-button-prev",
           nextEl: ".swiper-button-next",
         },
+      });
+      $(document).ready(function () {
+        var username = "BB545"; // GitHub 사용자 이름
+        var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
+        var filePath = "product/item_1.txt"; // 가져올 파일 경로
+
+        // GitHub raw URL 생성
+        var rawURL =
+          "https://raw.githubusercontent.com/" +
+          username +
+          "/" +
+          repo +
+          "/main/" +
+          filePath;
+
+        // AJAX 요청으로 파일 가져오기
+        $.ajax({
+          url: rawURL,
+          success: function (data) {
+            // 파일 내용을 content 요소에 추가
+            $("#content").html(data);
+          },
+          error: function () {
+            $("#content").html(
+              "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
+            );
+          },
+        });
       });
     </script>
   </body>
