header 추가 및 main 수정

--- a/html/main.html
+++ b/html/main.html
@@ -112,14 +112,14 @@
             <div class="swiper-name">판매 상품</div>
             <div class="swiper">
                 <div class="swiper-wrapper">
-                  <img class="swiper-slide" src="/item_jpgs/item1.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item2.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item3.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item4.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item5.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item6.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item7.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item8.jpg"></img>
+                  <img class="swiper-slide" src="/item_jpgs/item1.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item2.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item3.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item4.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item5.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item6.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item7.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item8.jpg">
                 </div>
           
                 <div class="swiper-pagination"></div>
@@ -139,14 +139,14 @@
             <div class="swiper-name">인기 상품</div>
             <div class="swiper">
                 <div class="swiper-wrapper">
-                  <img class="swiper-slide" src="/item_jpgs/item1.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item2.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item3.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item4.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item5.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item6.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item7.jpg"></img>
-                  <img class="swiper-slide" src="/item_jpgs/item8.jpg"></img>
+                  <img class="swiper-slide" src="/item_jpgs/item1.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item2.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item3.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item4.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item5.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item6.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item7.jpg">
+                  <img class="swiper-slide" src="/item_jpgs/item8.jpg">
                 </div>
           
                 <div class="swiper-pagination"></div>
