nav 변경 업로드

--- a/html/main.html
+++ b/html/main.html
@@ -45,11 +45,10 @@
       </div>
       <nav>
           <ul class="nav__list">
-              <li class="nav__item"><a href="#" class="nav__link">홈</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">서비스</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">포트폴리오</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">블로그</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">연락처</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">모든 상품</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">가구 상품</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">야외 상품</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">생활 상품</a></li>
           </ul>
       </nav>
       <div class="nav__toggle">
