--- a/html/main.html
+++ b/html/main.html
@@ -27,15 +27,17 @@
     <link rel="stylesheet" href="/css/Img_slider.css" />
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/animation.css">
     <title>스틸스</title>
 </head>
 <body>
     <header class="header">
-      <div class="nav-login">
+      <div class="nav-login" data-text="로그인">
           <svg xmlns="http://www.w3.org/2000/svg" width="30px" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
             <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
           </svg>
+          <div class="hover-text">로그인</div>
       </div>
       <div class="no_div"></div>
       <div class="nav__brandLogo">
@@ -45,7 +47,7 @@
       </div>
       <nav>
           <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link">모든 상품</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">전체 상품</a></li>
             <li class="nav__item"><a href="#" class="nav__link">가구 상품</a></li>
             <li class="nav__item"><a href="#" class="nav__link">야외 상품</a></li>
             <li class="nav__item"><a href="#" class="nav__link">생활 상품</a></li>
@@ -67,26 +69,31 @@
       </div>
       <div class="menuBarIcons">
           <!-- 검색 -->
-          <div class="button button-menu-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-search" viewBox="0 0 16 16">
+          <div class="button button-menu-icon search" data-text="검색"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-search" viewBox="0 0 16 16">
               <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-            </svg></div>
+            </svg>
+            <div class="hover-text">검색</div>
+          </div>
             <!-- 장바구니 -->
-          <div class="button button-menu-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-cart-fill" viewBox="0 0 16 16">
+          <div class="button button-menu-icon cart" data-text="장바구니"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-cart-fill" viewBox="0 0 16 16">
               <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
-            </svg></div>
+            </svg>
+            <div class="hover-text">장바구니</div>
+          </div>
             <!-- 로그인 -->
-          <div class="button button-menu-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30px" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
+          <div class="button button-menu-icon login" data-text="로그인"><svg xmlns="http://www.w3.org/2000/svg" width="30px" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
               <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
               <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-            </svg></div>
+            </svg>
+            <div class="hover-text">로그인</div>
+          </div>
       </div>
     </header>
     <div class="nav__div">
-      <div class="div__item"><a href="#" class="nav__link">홈</a></div>
-      <div class="div__item"><a href="#" class="nav__link">서비스</a></div>
-      <div class="div__item"><a href="#" class="nav__link">포트폴리오</a></div>
-      <div class="div__item"><a href="#" class="nav__link">블로그</a></div>
-      <div class="div__item"><a href="#" class="nav__link">연락처</a></div>
+      <div class="div__item"><a href="#" class="nav__link">전체 상품</a></div>
+      <div class="div__item"><a href="#" class="nav__link">가구 상품</a></div>
+      <div class="div__item"><a href="#" class="nav__link">야외 상품</a></div>
+      <div class="div__item"><a href="#" class="nav__link">생활 상품</a></div>
     </div>
     
     <script>
