--- a/html/purchase.html
+++ b/html/purchase.html
@@ -51,6 +51,7 @@
                     d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
                 />
             </svg>
+            <div class="hover-text2">메뉴</div>
         </div>
         <div class="menuBarIcons">
             <!-- 검색 -->
