--- a/html/product_page.html
+++ b/html/product_page.html
@@ -34,7 +34,7 @@
       </div>
       <div class="no_div"></div>
       <div class="nav__brandLogo">
-        <a href="#">
+        <a href="/html/main.html">
             <img src="/img_logo/logo.png" alt="brandLogo" width="90">
         </a>
       </div>
