글자 크기 hover 추가 업로드

--- a/html/main.html
+++ b/html/main.html
@@ -47,10 +47,10 @@
       </div>
       <nav>
           <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link">전체 상품</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">가구 상품</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">야외 상품</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">생활 상품</a></li>
+            <li class="nav__item"><a href="#">전체 상품</a></li>
+            <li class="nav__item"><a href="#">가구 상품</a></li>
+            <li class="nav__item"><a href="#">야외 상품</a></li>
+            <li class="nav__item"><a href="#">생활 상품</a></li>
           </ul>
       </nav>
       <div class="nav__toggle">
@@ -91,10 +91,10 @@
       </div>
     </header>
     <div class="nav__div">
-      <div class="div__item"><a href="#" class="nav__link">전체 상품</a></div>
-      <div class="div__item"><a href="#" class="nav__link">가구 상품</a></div>
-      <div class="div__item"><a href="#" class="nav__link">야외 상품</a></div>
-      <div class="div__item"><a href="#" class="nav__link">생활 상품</a></div>
+      <div class="div__item"><a href="#">전체 상품</a></div>
+      <div class="div__item"><a href="#">가구 상품</a></div>
+      <div class="div__item"><a href="#">야외 상품</a></div>
+      <div class="div__item"><a href="#">생활 상품</a></div>
     </div>
     
     <script>
