--- a/html/purchase.html
+++ b/html/purchase.html
@@ -146,7 +146,7 @@
                             </select>
                         </div>
                         <div class="check-group">
-                            <input type="submit" value="주문 완료">
+                            <input type="submit" value="주문 완료" class="check-btn">
                         </div>
                     </form>
                 </div>
