--- a/html/product_page.html
+++ b/html/product_page.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="/css/badge.css">
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/search.css">
+    <link rel="stylesheet" href="/css/cart.css">
   </head>
 
   <body>
@@ -74,7 +75,7 @@
           <div class="hover-text">검색</div>
         </div>
           <!-- 장바구니 -->
-        <div class="button button-menu-icon cart_tog"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-cart-fill" viewBox="0 0 16 16">
+        <div class="button button-menu-icon cart_tog"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-cart-fill nav__cart" id="cart-btn" viewBox="0 0 16 16">
             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
           </svg>
           <div class="hover-text">장바구니</div>
@@ -348,6 +349,35 @@
         });
     </script>
     <!----------------- Login script ----------->
+<!--==================== CART.html ====================-->
+ <div class="cart" id="cart">
+  <div action="" class="cart__form">
+    <div><svg xmlns="http://www.w3.org/2000/svg" width="300px"  fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
+      <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"/>
+    </svg></div>
+     <span class="empty">장바구니가 비었어요.</span><br/><br>
+     <span>장바구니를 새로운 상품으로<br> 채워보세요.</span>
+  </div>
+  <svg xmlns="http://www.w3.org/2000/svg" width="30px" fill="currentcolor" class="bi bi-x cart__close" id="cart-close" viewBox="0 0 16 16">
+    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"></path>
+    </svg>
+</div>
+<!-- /*=============== Cart script ===============*/ -->
+<script>
+const cart = document.getElementById('cart'),
+cartBtn = document.getElementById('cart-btn'),
+cartClose = document.getElementById('cart-close')
+
+/* Cart show */
+cartBtn.addEventListener('click', () =>{
+cart.classList.add('show-cart')
+})
+
+/* Cart hidden */
+cartClose.addEventListener('click', () =>{
+cart.classList.remove('show-cart')
+})
+</script>
     <!--==================== SEARCH html====================-->
     <div class="search" id="search">
       <form action="" class="search__form">
