--- a/html/main.html
+++ b/html/main.html
@@ -23,24 +23,23 @@
       rel="stylesheet"
       href="http://fonts.googleapis.com/icon?family=Material+Icons"
     />
+
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
     <link rel="stylesheet" href="/css/stylehh.css" />
     <link rel="stylesheet" href="/css/Img_slider.css" />
     <link rel="stylesheet" href="/css/header.css">
-<<<<<<< Updated upstream
-=======
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/animation.css">
     <link rel="stylesheet" href="/css/search.css">
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/badge.css">
     <link rel="stylesheet" href="/css/cart.css">
->>>>>>> Stashed changes
     <title>스틸스</title>
   </head>
   <body>
     <header class="header">
-      <div class="nav-login">
-          <svg xmlns="http://www.w3.org/2000/svg" width="30px" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
+      <div class="nav-login" id="login_open">
+          <svg xmlns="http://www.w3.org/2000/svg" width="40px" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
             <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
           </svg>
@@ -76,19 +75,15 @@
       </div>
       <div class="menuBarIcons">
           <!-- 검색 -->
-          <div class="button button-menu-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-search" viewBox="0 0 16 16">
+          <div class="button button-menu-icon search_tog" id="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-search" viewBox="0 0 16 16">
               <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
             </svg></div>
             <!-- 장바구니 -->
-<<<<<<< Updated upstream
-          <div class="button button-menu-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-cart-fill" viewBox="0 0 16 16">
-=======
           <div class="button button-menu-icon cart_tog"><svg xmlns="http://www.w3.org/2000/svg" width="30px"  fill="white" class="bi bi-cart-fill nav__cart" id="cart-btn" viewBox="0 0 16 16">
->>>>>>> Stashed changes
               <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
             </svg></div>
             <!-- 로그인 -->
-          <div class="button button-menu-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30px" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
+          <div class="button button-menu-icon login_tog" id="form-open"><svg xmlns="http://www.w3.org/2000/svg" width="30px" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
               <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
               <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
             </svg></div>
@@ -108,7 +103,7 @@
         <div class="hover-text3">검색</div>
       </div>
       <div class="badge">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bag-dash-fill badge-item" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bag-dash-fill badge-item" id="cart-open" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0M6 9.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1z"/>
         </svg>
         <div class="hover-text3">장바구니</div>
@@ -231,8 +226,6 @@
           },
         });
       </script>
-<<<<<<< Updated upstream
-=======
 <!--==================== SEARCH html====================-->
       <div class="search" id="search">
         <form class="search__form">
@@ -280,10 +273,14 @@
 <!-- /*=============== Cart script ===============*/ -->
 <script>
 const cart = document.getElementById('cart'),
+cartop = document.getElementById('cart-open'),
 cartBtn = document.getElementById('cart-btn'),
 cartClose = document.getElementById('cart-close')
 
 /* Cart show */
+cartop.addEventListener('click', () =>{
+cart.classList.add('show-cart')
+})
 cartBtn.addEventListener('click', () =>{
 cart.classList.add('show-cart')
 })
@@ -428,6 +425,5 @@ cart.classList.remove('show-cart')
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
->>>>>>> Stashed changes
 </body>
 </html>
