Complete Product Page

--- a/html/hyewon.html
+++ b/html/hyewon.html
@@ -29,8 +29,8 @@
             <svg
               id="modal_close_btn"
               xmlns="http://www.w3.org/2000/svg"
-              width="20"
-              height="20"
+              width="30"
+              height="30"
               fill="currentColor"
               class="bi bi-x-lg"
               viewBox="0 0 20 20"
@@ -68,52 +68,52 @@
       <div class="grid">
         <div class="card">
           <img id="item1" src="/item_jpgs/item1.jpg" alt="상품 1" />
-          <h2>상품 제목 1</h2>
-          <p>$10.99</p>
+          <h2>Lake Louise Table</h2>
+          <p>2,550,000원</p>
         </div>
         <div class="card">
           <img id="item2" src="/item_jpgs/item2.jpg" alt="상품 2" />
-          <h2>상품 제목 2</h2>
-          <p>$19.99</p>
+          <h2>'WOW' Cube</h2>
+          <p>6,400,000원</p>
         </div>
         <div class="card">
           <img id="item3" src="/item_jpgs/item3.jpg" alt="상품 3" />
-          <h2>상품 제목 3</h2>
-          <p>$14.99</p>
+          <h2>'WOW' Cube Sofa Table</h2>
+          <p>8,800,000원</p>
         </div>
       </div>
       <div class="grid">
         <div class="card">
           <img id="item4" src="/item_jpgs/item4.jpg" alt="상품 4" />
-          <h2>상품 제목 4</h2>
-          <p>$10.99</p>
+          <h2>Amante Table</h2>
+          <p>2,100,000원</p>
         </div>
         <div class="card">
           <img id="item5" src="/item_jpgs/item5.jpg" alt="상품 5" />
-          <h2>상품 제목 5</h2>
-          <p>$19.99</p>
+          <h2>Pallet Table</h2>
+          <p>5,800,000원</p>
         </div>
         <div class="card">
           <img id="item6" src="/item_jpgs/item6.jpg" alt="상품 6" />
-          <h2>상품 제목 6</h2>
-          <p>$14.99</p>
+          <h2>Lounge Rock Table & Stool</h2>
+          <p>3,100,000원 & 930,000원</p>
         </div>
       </div>
       <div class="grid">
         <div class="card">
           <img id="item7" src="/item_jpgs/item7.jpg" alt="상품 7" />
-          <h2>상품 제목 7</h2>
-          <p>$10.99</p>
+          <h2>Iconic Booth</h2>
+          <p>6,000,000원</p>
         </div>
         <div class="card">
           <img id="item8" src="/item_jpgs/item8.jpg" alt="상품 8" />
-          <h2>상품 제목 8</h2>
-          <p>$19.99</p>
+          <h2>Arc Stool</h2>
+          <p>1,150,000원</p>
         </div>
         <div class="card">
           <img id="item9" src="/item_jpgs/item9.jpg" alt="상품 9" />
-          <h2>상품 제목 9</h2>
-          <p>$14.99</p>
+          <h2>Ashiba Wall Mirror #1, #2</h2>
+          <p>650,000원</p>
         </div>
       </div>
     </div>
