장바구니 수정

--- a/html/product_page.html
+++ b/html/product_page.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="/css/badge.css" />
     <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="/css/search.css" />
+    <link rel="stylesheet" href="/css/cart.css">
   </head>
 
   <body>
