장바구니 수정

--- a/html/product_page.html
+++ b/html/product_page.html
@@ -159,6 +159,7 @@
           height="20"
           fill="currentColor"
           class="bi bi-bag-dash-fill badge-item"
+          id="cart-open"
           viewBox="0 0 16 16"
         >
           <path
