제품페이지 수정

--- a/html/product_page.html
+++ b/html/product_page.html
@@ -183,44 +183,45 @@
     <!-- main -->
     <div class="container">
       <div id="modal">
-        <div class="modal_content">
-          <div class="close_button">
-            <svg
-              id="modal_close_btn"
-              xmlns="http://www.w3.org/2000/svg"
-              width="30"
-              height="30"
-              fill="currentColor"
-              class="bi bi-x-lg"
-              viewBox="0 0 20 20"
-            >
-              <path
-                d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"
-              />
-            </svg>
-          </div>
-          <div class="content">
-            <div class="swiper">
-              <div class="swiper-wrapper">
-                <img class="swiper-slide" id="item__1" src="" />
-                <img class="swiper-slide" id="item__2" src="" />
-                <img class="swiper-slide" id="item__3" src="" />
-                <img class="swiper-slide" id="item__4" src="" />
-              </div>
-              <div class="swiper-pagination"></div>
-              <div class="swiper-button-prev">
-                <div class="material-icons"></div>
-              </div>
-              <div class="swiper-button-next">
-                <div class="material-icons"></div>
-              </div>
+        <div class="modal_layer">
+          <div class="modal_content">
+            <div class="close_button">
+              <svg
+                id="modal_close_btn"
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-x-lg"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"
+                />
+              </svg>
             </div>
-            <div id="content" class="description"></div>
+            <div class="content">
+              <div class="swiper">
+                <div class="swiper-wrapper">
+                  <img class="swiper-slide" id="item__1" src="" />
+                  <img class="swiper-slide" id="item__2" src="" />
+                  <img class="swiper-slide" id="item__3" src="" />
+                  <img class="swiper-slide" id="item__4" src="" />
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev">
+                  <div class="material-icons"></div>
+                </div>
+                <div class="swiper-button-next">
+                  <div class="material-icons"></div>
+                </div>
+              </div>
+              <div id="content" class="description"></div>
+            </div>
+            <div class="buy_button">
+              <a href="" class="button btnFloat but_btn"></a>
+            </div>
           </div>
-          <div class="buy_button">
-            <a href="" class="button btnFloat but_btn"></a>
-          </div>
-          <div class="modal_layer"></div>
         </div>
       </div>
 
