구매페이지 연결

--- a/html/product_page.html
+++ b/html/product_page.html
@@ -219,7 +219,7 @@
               <div id="content" class="description"></div>
             </div>
             <div class="buy_button">
-              <a href="" class="button btnFloat but_btn"></a>
+              <a href="/html/purchase.html" class="button btnFloat but_btn"></a>
             </div>
           </div>
         </div>
