제품 페이지 연결

--- a/html/purchase.html
+++ b/html/purchase.html
@@ -49,7 +49,7 @@
         </div>
         <nav>
             <ul class="nav__list">
-              <li class="nav__item"><a href="#">전체 상품</a></li>
+              <li class="nav__item"><a href="/html/all_product_page.html">전체 상품</a></li>
               <li class="nav__item"><a href="#">가구 상품</a></li>
               <li class="nav__item"><a href="#">야외 상품</a></li>
               <li class="nav__item"><a href="#">생활 상품</a></li>
@@ -94,7 +94,7 @@
 
     </header>
     <div class="nav__div">
-        <div class="div__item"><a href="#">전체 상품</a></div>
+        <div class="div__item"><a href="/html/all_product_page.html">전체 상품</a></div>
         <div class="div__item"><a href="#">가구 상품</a></div>
         <div class="div__item"><a href="#">야외 상품</a></div>
         <div class="div__item"><a href="#">생활 상품</a></div>
