--- a/html/main.html
+++ b/html/main.html
@@ -52,11 +52,10 @@
       </div>
       <nav>
           <ul class="nav__list">
-              <li class="nav__item"><a href="#" class="nav__link">홈</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">서비스</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">포트폴리오</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">블로그</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">연락처</a></li>
+              <li class="nav__item"><a href="/html/all_product_page.html" class="nav__link">전체 상품</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">가구 상품</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">야외 상품</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">생활 상품</a></li>
           </ul>
       </nav>
       <div class="nav__toggle">
@@ -90,7 +89,7 @@
       </div>
     </header>
     <div class="nav__div">
-      <div class="div__item"><a href="#">전체 상품</a></div>
+      <div class="div__item"><a href="/html/all_product_page.html">전체 상품</a></div>
       <div class="div__item"><a href="#">가구 상품</a></div>
       <div class="div__item"><a href="#">야외 상품</a></div>
       <div class="div__item"><a href="#">생활 상품</a></div>
