--- a/html/purchase.html
+++ b/html/purchase.html
@@ -50,9 +50,9 @@
         <nav>
             <ul class="nav__list">
               <li class="nav__item"><a href="/html/all_product_page.html">전체 상품</a></li>
-              <li class="nav__item"><a href="#">가구 상품</a></li>
-              <li class="nav__item"><a href="#">야외 상품</a></li>
-              <li class="nav__item"><a href="#">생활 상품</a></li>
+              <li class="nav__item"><a href="/html/living_product_page.html">가구 상품</a></li>
+              <li class="nav__item"><a href="/html/outdoor_product_page.html">야외 상품</a></li>
+              <li class="nav__item"><a href="/html/life_product_page.html">생활 상품</a></li>
             </ul>
         </nav>
         <div class="nav__toggle">
@@ -95,9 +95,9 @@
     </header>
     <div class="nav__div">
         <div class="div__item"><a href="/html/all_product_page.html">전체 상품</a></div>
-        <div class="div__item"><a href="#">가구 상품</a></div>
-        <div class="div__item"><a href="#">야외 상품</a></div>
-        <div class="div__item"><a href="#">생활 상품</a></div>
+        <div class="div__item"><a href="/html/living_product_page.html">가구 상품</a></div>
+        <div class="div__item"><a href="/html/outdoor_product_page.html">야외 상품</a></div>
+        <div class="div__item"><a href="/html/life_product_page.html">생활 상품</a></div>
     </div>
     <div class="badges-container">
         <div class="badge">
@@ -117,10 +117,19 @@
     <script>
         // JavaScript
         $(document).ready(function() {
-            $('.nav__toggle').click(function() {
-                $('.nav__div').toggle();
-            });
+        $('.nav__toggle').click(function() {
+            $('.nav__div').toggle();
         });
+
+        // 화면 크기 변경 시 자동으로 네비게이션 숨기기
+        $(window).resize(function() {
+            if ($(window).width() < 768) {
+                $('.nav__div').show();
+            } else {
+                $('.nav__div').hide();
+            }
+        });
+    });
     </script>
 
     <main>
