로그인 블러처리

--- a/html/living_product_page.html
+++ b/html/living_product_page.html
@@ -614,6 +614,7 @@
     </footer>
     <!--==================== Login.html ====================-->
     <div class="home">
+      <div class="blur-background"></div>
       <div class="form_container">
         <i class="uil uil-times form_close"></i>
         <!-- Login From -->
