--- a/html/main.html
+++ b/html/main.html
@@ -300,6 +300,7 @@ cart.classList.remove('show-cart')
 </script>
 <!--==================== Login.html ====================-->
         <div class="home">
+          <div class="blur-background"></div>
           <div class="form_container">
             <i class="uil uil-times form_close"></i>
             <!-- Login From -->
