--- a/html/purchase.html
+++ b/html/purchase.html
@@ -264,6 +264,7 @@
     </script>
     <!--==================== Login.html ====================-->
         <div class="home">
+          <div class="blur-background"></div>
           <div class="form_container">
             <i class="uil uil-times form_close"></i>
             <!-- Login From -->
