--- a/html/outdoor_product_page.html
+++ b/html/outdoor_product_page.html
@@ -425,6 +425,7 @@
     </footer>
     <!--==================== Login.html ====================-->
     <div class="home">
+      <div class="blur-background"></div>
       <div class="form_container">
         <i class="uil uil-times form_close"></i>
         <!-- Login From -->
