영어이름 한글로 변경

--- a/html/life_product_page.html
+++ b/html/life_product_page.html
@@ -239,7 +239,7 @@
       <div class="grid">
         <div class="card">
           <img id="item9" src="/item_jpgs/item9.jpg" alt="상품 9" />
-          <h2>Ashiba Wall Mirror #1, #2</h2>
+          <h2>아시바 벽 거울 #1, #2</h2>
           <p>650,000원</p>
         </div>
       </div>
