--- a/html/living_product_page.html
+++ b/html/living_product_page.html
@@ -240,34 +240,34 @@
       <div class="grid">
         <div class="card">
           <img id="item1" src="/item_jpgs/item1.jpg" alt="상품 1" />
-          <h2>Lake Louise Table</h2>
+          <h2>레이크 루이스 테이블</h2>
           <p>2,550,000원</p>
         </div>
         <div class="card">
           <img id="item2" src="/item_jpgs/item2.jpg" alt="상품 2" />
-          <h2>'WOW' Cube</h2>
+          <h2>'와우' 큐브</h2>
           <p>6,400,000원</p>
         </div>
         <div class="card">
           <img id="item3" src="/item_jpgs/item3.jpg" alt="상품 3" />
-          <h2>'WOW' Cube Sofa Table</h2>
+          <h2>'와우' 큐브 소파 테이블</h2>
           <p>8,800,000원</p>
         </div>
       </div>
       <div class="grid">
         <div class="card">
           <img id="item4" src="/item_jpgs/item4.jpg" alt="상품 4" />
-          <h2>Amante Table</h2>
+          <h2>아만테 테이블</h2>
           <p>2,100,000원</p>
         </div>
         <div class="card">
           <img id="item5" src="/item_jpgs/item5.jpg" alt="상품 5" />
-          <h2>Pallet Table</h2>
+          <h2>파레트 테이블</h2>
           <p>5,800,000원</p>
         </div>
         <div class="card">
           <img id="item6" src="/item_jpgs/item6.jpg" alt="상품 6" />
-          <h2>Lounge Rock Table & Stool</h2>
+          <h2>라운지 락 테이블 & 의자</h2>
           <p>3,100,000원 & 930,000원</p>
         </div>
       </div>
