--- a/html/outdoor_product_page.html
+++ b/html/outdoor_product_page.html
@@ -239,12 +239,12 @@
       <div class="grid">
         <div class="card">
           <img id="item7" src="/item_jpgs/item7.jpg" alt="상품 7" />
-          <h2>Iconic Booth</h2>
+          <h2>아이코닉 부스</h2>
           <p>6,000,000원</p>
         </div>
         <div class="card">
           <img id="item8" src="/item_jpgs/item8.jpg" alt="상품 8" />
-          <h2>Arc Stool</h2>
+          <h2>아크 의자</h2>
           <p>1,150,000원</p>
         </div>
       </div>
