--- a/html/purchase.html
+++ b/html/purchase.html
@@ -137,14 +137,14 @@
               <div class="pur-product">
                 <img src="../item_jpgs/item1.jpg" alt="Product 1" />
                 <div class="pur-product-info">
-                  <h2>Lake Louise Table</h2>
+                  <h2>레이크 루이스 테이블</h2>
                   <p class="pro-price">2550000원</p>
                 </div>
               </div>
               <div class="pur-product">
                 <img src="../item_jpgs/item2.jpg" alt="Product 2" />
                 <div class="pur-product-info">
-                  <h2>'WOW' Cube</h2>
+                  <h2>'와우' 큐브</h2>
                   <p class="pro-price">6400000원</p>
                 </div>
               </div>
