--- a/html/all_product_page.html
+++ b/html/all_product_page.html
@@ -234,51 +234,51 @@
       <div class="grid">
         <div class="card">
           <img id="item1" src="/item_jpgs/item1.jpg" alt="상품 1" />
-          <h2>Lake Louise Table</h2>
+          <h2>레이크 루이스 테이블</h2>
           <p>2,550,000원</p>
         </div>
         <div class="card">
           <img id="item2" src="/item_jpgs/item2.jpg" alt="상품 2" />
-          <h2>'WOW' Cube</h2>
+          <h2>'와우' 큐브</h2>
           <p>6,400,000원</p>
         </div>
         <div class="card">
           <img id="item3" src="/item_jpgs/item3.jpg" alt="상품 3" />
-          <h2>'WOW' Cube Sofa Table</h2>
+          <h2>'와우' 큐브 소파 테이블</h2>
           <p>8,800,000원</p>
         </div>
       </div>
       <div class="grid">
         <div class="card">
           <img id="item4" src="/item_jpgs/item4.jpg" alt="상품 4" />
-          <h2>Amante Table</h2>
+          <h2>아만테 테이블</h2>
           <p>2,100,000원</p>
         </div>
         <div class="card">
           <img id="item5" src="/item_jpgs/item5.jpg" alt="상품 5" />
-          <h2>Pallet Table</h2>
+          <h2>파레트 테이블</h2>
           <p>5,800,000원</p>
         </div>
         <div class="card">
           <img id="item6" src="/item_jpgs/item6.jpg" alt="상품 6" />
-          <h2>Lounge Rock Table & Stool</h2>
+          <h2>라운지 락 테이블 & 의자</h2>
           <p>3,100,000원 & 930,000원</p>
         </div>
       </div>
       <div class="grid">
         <div class="card">
           <img id="item7" src="/item_jpgs/item7.jpg" alt="상품 7" />
-          <h2>Iconic Booth</h2>
+          <h2>아이코닉 부스</h2>
           <p>6,000,000원</p>
         </div>
         <div class="card">
           <img id="item8" src="/item_jpgs/item8.jpg" alt="상품 8" />
-          <h2>Arc Stool</h2>
+          <h2>아크 의자</h2>
           <p>1,150,000원</p>
         </div>
         <div class="card">
           <img id="item9" src="/item_jpgs/item9.jpg" alt="상품 9" />
-          <h2>Ashiba Wall Mirror #1, #2</h2>
+          <h2>아시바 벽 거울 #1, #2</h2>
           <p>650,000원</p>
         </div>
       </div>
